fixed table__collapse

--- a/css/table.css
+++ b/css/table.css
@@ -1,9 +1,12 @@
 .table {
     overflow-x: auto;
-    border-collapse: collapse;
     width: 100%;
     margin: 0 auto;
     line-height: 1.5;
+}
+
+.table__collapse {
+    border-collapse: collapse;
 }
 
 .table__caption {
